For the latest news, visit the SparForte web site.

CHANGES SINCE 2.3.1

1. [Pascal B/ jrmarino] Fix: OS/x and FreeBSD patch.

CHANGES SINCE 2.3

2. Fix: The prompt script now reports any errors when it runs.  The prompt script uses the default prompt on an error instead of being a blank string.

3. New: new example scripts: git_prompt_script,

4. Fix: missing files with 2> and 2>> now reported as an error.  (<, > and >> were working properly).

5. Fix: file paths for redirection may not immediately follow a redirection (no longer require a space).

5. New: Bourne shell dollar brace ${...} variable substitutions. [Docs needed, tests needed]

6. New: Bourne shell dollar parenthesis $(...) command substitution. [Docs needed, tests needed]

7. New: Bourne shell length expansion ${#VAR}.  [Docs needed, tests needed]

8. New: Bourne shell ~user is equivalent to /home/user.

9. Refactor: Bourne shell parsing completely rewritten to provide the foundation for certain new features.

10. Fix: (shell rewrite) high-ascii characters in SQL commands. [testing needed]

11. Fix: (shell rewrite) "Word" can be used as a variable name.

12. Fix: (shell rewrite) 2>&1 fixed to redirect in a pipeline.

13. Fix: (shell rewrite) 2>&1 no longer redirects output for all commands in the pipeline, to match Bourne shell behaviour.

14. New: (shell rewrite) ${:-}, ${:+} and ${:?}.

15. New: (shell rewrite) Glob patterns are allowed in directories in a path (e.g. ls /home/k*/*.txt is now possible).

16. Change: cd, env and unset no longer show the variable name in maintenance mode.  Because these are shell commands, an accidental use of a variable expansion could reveal values in production.

14. New: (shell rewrite) $* and $@.

15. New: pragma annotate( accounts ...).

16. New (shell rewrite) AdaScript `` may have backslash escapes.
